--- a/index.css
+++ b/index.css
@@ -24,14 +24,24 @@ h1 {
 
   box-shadow: 0px 6px 5px 0px rgba(112, 112, 112, 0.055);
 }
+
 .btn-perricos:hover{
   background-color: #3a2a97;
   color: #f7f6f6;
   cursor: pointer;
 }
+
 .btn-selected{
+  margin: 1rem 1rem;
+  padding: 1rem 2rem;
+
+  border: 1px solid #c2c2c2;
+  border-radius: 10px;
   background-color: #3a2a97;
   color: #f7f6f6;
+  display: inline-block;
+
+  box-shadow: 0px 6px 5px 0px rgba(112, 112, 112, 0.055);
 }
 
 div {
