--- a/index.css
+++ b/index.css
@@ -30,6 +30,9 @@ h1 {
   color: #f7f6f6;
   cursor: pointer;
 }
+.btn-perricos:disabled{
+  background-color: #524f61;
+}
 
 .btn-selected{
   margin: 1rem 1rem;
@@ -90,4 +93,15 @@ img {
 .btn-dislike{
   background-color: #0a5f2a;
   color:white;
+}
+
+select, input{
+  padding: 1rem 1rem;
+
+  border: 1px solid #c2c2c2;
+  border-radius: 10px;
+  background-color: #f7f6f6;
+  display: inline-block;
+
+  box-shadow: 0px 6px 5px 0px rgba(112, 112, 112, 0.055);
 }
