--- a/css/home.css
+++ b/css/home.css
@@ -105,3 +105,38 @@ select, input{
 
   box-shadow: 0px 6px 5px 0px rgba(112, 112, 112, 0.055);
 }
+
+.bottom-menu {
+  position: fixed;
+  inset: auto auto 2rem 50%;
+  transform: translateX(-50%);
+  
+  border: 1px solid rgba(46, 46, 46, 0.2);
+  border-radius: 999px;
+  background-color: #ffffff;
+  box-shadow: 0px 6px 5px 0px rgba(112, 112, 112, 0.1);
+
+  width: auto;
+}
+
+.bottom-menu ul {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  height: auto;
+  width: auto;
+  margin: 0;
+  padding: 0;
+}
+
+.bottom-menu img {
+  cursor: pointer;
+  height: 50px;
+  width: 50px;
+  margin: 0.5rem 4rem;
+  background-color: black;
+}
+
+
