--- a/css/home.css
+++ b/css/home.css
@@ -1,16 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-
 body {
   display: flex;
   flex-direction: column;
   align-items: center;
   font-family:'Montserrat', Times, serif;
+  padding: 0 10%;
+  padding-bottom: 50px;
+}
+
+.header__container {
+  border: 2px solid red;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 h1 {
-  margin: 2rem 0;
-  font-size: 54px;
+  font-size: 28px;
+  font-weight: 600;
+}
+
+.filters__container {
+  border: solid 2px blue;
 }
 
 .btn-perricos {
@@ -67,7 +81,6 @@ div {
 
 .card p{
   font-size: 28px;
-  margin-top: -2rem;
 }
 
 .card button{
@@ -96,7 +109,6 @@ img {
 }
 
 select, input{
-  padding: 1rem 1rem;
 
   border: 1px solid #c2c2c2;
   border-radius: 10px;
