arreglos css y simplificacion de archivos

--- a/css/topmenu.css
+++ b/css/topmenu.css
@@ -9,6 +9,31 @@
     padding: 0 10%;
     box-shadow: 0px 1px 10px #684f34;
 }
+.topbar__container nav {
+    height: 100%;
+}
+.topbar__container ul {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    list-style: none;
+}
+.topbar__container li{
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+.topbar__container-links {
+    padding: 0.5rem 1rem;
+    background-color: #FFE066;
+    border-radius: 8px;
+    border: 1px solid #C49A6C;
+    color: #684f34;
+    font-weight: 600;
+}
+.topbar__container-links:hover {
+    cursor: pointer;
+}
 
 body{
     padding-top: 3.5rem;
