--- a/css/home.css
+++ b/css/home.css
@@ -7,6 +7,14 @@ body {
   font-family:'Montserrat', Times, serif;
   padding: 0 10%;
   padding-bottom: 50px;
+  position: relative;
+}
+h1, h2, p{
+  margin: 0;
+}
+
+button:hover {
+  cursor: pointer;
 }
 
 .header__container {
@@ -140,10 +148,99 @@ select, input{
 
 .bottom-menu img {
   cursor: pointer;
-  height: 50px;
-  width: 50px;
-  margin: 0.5rem 4rem;
-  background-color: black;
+  height: 30px;
+  width: 30px;
+  margin: 0.75rem 4rem;
 }
 
+.anyadir__perrete {
+  padding: 0.25rem;
+  background-color: #FFE066;
+  border-radius: 999px;
+}
 
+.addPerrete__container {
+
+  position: absolute;
+  inset: 50% auto auto 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+  max-width: 550px;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+  border-radius: 16px;
+
+  padding: 2rem;
+  box-sizing: border-box;
+  
+  display: flex;
+  flex-direction: column;
+  gap: 1rem
+}
+
+.bg-black {
+  position: fixed;
+  inset: 0 0 0 0;
+  background-color: rgba(0, 0, 0, 0.14);
+  z-index: 2;
+}
+
+.addPerrete__container-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.addPerrete__container--close {
+  height: 40px;
+  width: 40px;
+  cursor: pointer;
+}
+
+.addPerrete__container-form {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.addPerrete__container label {
+  font-size: 16px;
+  font-weight: 500;
+  margin-top: 0.5rem;
+}
+
+.addPerrete__container input, .addPerrete__container textarea, .addPerrete__container select {
+  height: 30px;
+  min-height: 30px;
+  max-height: 80px;
+  width: 100%;
+  max-width: 100%;
+  border-radius: 8px;
+  padding-left: 0.5rem;
+  margin: 0.5rem 0;
+  box-sizing: border-box;
+}
+
+.btn-positive {
+    width: 100%;
+    padding: 1rem;
+    background-color: #FFE066;
+    border-radius: 8px;
+    border: 1px solid #C49A6C;
+    color: #684f34;
+    font-weight: 600;
+    margin-top: 1rem;
+    font-size: 18px;
+}
+
+.error-form {
+  margin-top: -0.25rem;
+  color: rgb(183, 28, 28);
+  height: 500;
+  font-size: 12px;
+}
+
+.hidden {
+  display: none;
+}
